--- a/Infinity Scroll/style.css
+++ b/Infinity Scroll/style.css
@@ -1,8 +1,60 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto&family=Roboto+Mono:wght@300&display=swap');
+
 html{
     box-sizing: border-box;
 }
 body{
     margin: 0;
-    min-height: 100vh;
-    background-color: dodgerblue;
+    font-family: 'Pacifico', cursive;
+    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Mono', monospace;
+    background-color: whitesmoke;
+}
+
+h1 {
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    font-size: 40px;
+    letter-spacing: 5px;
+
+}
+.loader{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.loader img{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.image-container{
+    margin: 10px 10%;
+}
+
+.image-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 600px){
+    h1{
+        font-size: 20px;
+
+    }
+    .image-container{
+        margin: 10px;
+    }
+    
 }
