--- a/Template/index.html
+++ b/Template/index.html
@@ -12,6 +12,6 @@
     
 
     <!-- Script -->
-    <script>src="script.js"</script>
+    <script type='text/javascript' src='script.js'></script>
 </body>
 </html>
